fixed steps indicator on mobile

--- a/app/assets/scss/components.scss
+++ b/app/assets/scss/components.scss
@@ -155,6 +155,11 @@
   background: #FFF;
   border-radius: 4px;
   padding: 4px;
+  margin: 4px;
+
+  @include breakpoint(tablet) {
+    margin: 0;
+  }
 
   &.type-a {
     ul {
