--- a/app/assets/scss/global.scss
+++ b/app/assets/scss/global.scss
@@ -393,6 +393,10 @@ hr {
 .header-bar {
   background-color: $purple;
 
+  &.visible-xs {
+    text-align: center;
+  }
+
   table {
     vertical-align: top;
 
